--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, user-scaleable=yes, initial-scale=0.3, maxmum-scale=1.0, minimum-scale=0.3">
   </head>
 
   <body>
