--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Enjoy yourself</p>
     </div>
 
-    <a href="https://wy08-10.github.io/KIYA/" class="btn">Confirm</a>
+    <a href="https://wy08-10.github.io/KIYA-S/" class="btn">Confirm</a>
   </body>
 
 
